<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".QuizAR">


    <fragment
        android:id="@+id/arFragment"
        android:name="com.upce.ar.CustomArFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_btn"
            android:text="@string/ot_zka"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_corner_btn"
            android:text="@string/ukon_it"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnConfirmAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_corner_btn"
            android:text="@string/potvrdit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_corner_btn"
            android:text="@string/odpov_di"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnConfirmAnswer"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toEndOf="@+id/btnEnd" />

        <ListView
            android:id="@+id/listViewAnswers"
            android:layout_width="271dp"
            android:layout_height="154dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/round_corner_listview"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/btnAnswers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent">

        </ListView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutQuestion"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@drawable/round_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView_info"
                android:layout_width="374dp"
                android:layout_height="49dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:singleLine="false"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_nextQuestion"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/round_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutQuestion">

            <TextView
                android:id="@+id/textView_evaluation"
                android:layout_width="123dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnNextQuestion"
                android:layout_width="111dp"
                android:layout_height="47dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/round_corner_btn"
                android:text="Pokračovat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView_firstStar"
                android:layout_width="74dp"
                android:layout_height="70dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="88dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imageView_secondStar"
                android:layout_width="74dp"
                android:layout_height="70dp"
                android:layout_marginTop="88dp"
                app:layout_constraintEnd_toStartOf="@+id/imageView_thirdStar"
                app:layout_constraintHorizontal_bias="0.535"
                app:layout_constraintStart_toEndOf="@+id/imageView_firstStar"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imageView_thirdStar"
                android:layout_width="74dp"
                android:layout_height="70dp"
                android:layout_marginTop="88dp"
                android:layout_marginEnd="36dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/btnNextQuestion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
